--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,10 @@
 <link rel="stylesheet"
 	href="bower_components/bootstrap-toggle/css/bootstrap-toggle.css" />
 
-<!-- endbower -->
+    <link rel="stylesheet"
+          href="bower_components/angular-confirm/dist/angular-confirm.min.css" />
+
+    <!-- endbower -->
 <!-- endbuild -->
 <!-- build:css content/css/main.css -->
 <link rel="stylesheet" href="content/css/main.css">
@@ -377,6 +380,8 @@ Latest compiled and minified JavaScript
 	<script src="app/entities/projects/update-privileges.controller.js"></script>
 	<script src="app/entities/projects/update-albums.controller.js"></script>
 	<script src="app/entities/projects/rename.controller.js"></script>
+	<script src="app/entities/projects/select-album.controller.js"></script>
+	<script src="app/entities/projects/select-actor.controller.js"></script>
 
 	<script src="app/entities/contacts/contacts-update.controller.js"></script>
 	<script src="app/entities/contacts/projectsList-controller.js"></script>
